# Socrates

./: .coverage  .coveragerc  .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  =0.1.0  =0.1.1  ACTION_MISMATCH_AUDIT.md  ACTION_PLAN_API_KEYS.md  ACTUAL_CODE_EXAMPLES.txt  ACTUAL_WORKFLOW_ISSUES.md  AGENT_BUS_INTEGRATION_SUMMARY.md  AGENT_INDEPENDENCE_REFACTORING.md  AGENT_LIBRARY_INTERFACE_CORRECTIONS.md  ALL_14_LIBRARIES_COMPLETE_INTEGRATION.md  ALL_BUGS_FIXED_SUMMARY.md  ALL_FIXES_SUMMARY.md  ALL_PHASES_COMPLETE.md  ANALYSIS_DOCUMENTATION_INDEX.md  ANALYSIS_REPORT.md  ANALYZER_PLAN.md  ANALYZER_STARTUP_GUIDE.md  API_DOCUMENTATION_SUMMARY.md  API_ENDPOINT_AUDIT.md  API_FIXES_IMPLEMENTATION_GUIDE.md  API_FIXES_SUMMARY.md  API_QUICK_REFERENCE.md  API_ROUTE_DESIGN.md  API_ROUTING_FIXES_VERIFICATION.md  ARCHITECTURAL_MISMATCH_ANALYSIS.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_ANALYSIS_LIBRARY_EXPORT.md  ARCHITECTURE_COMPARISON_REPORT.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_FIX_COMPLETE.md  (+570 more)
.archive/: AGENT_INTEGRATION_SUMMARY.md  ALL_PHASES_COMPLETE.md  ANALYSIS_PAGE_FIXES.md  ARCHITECTURE_COMPARISON.md  CHECK_PROJECT_CREATION_LOGS.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_BUG_HUNT_REPORT.md  CRITICAL_ARCHITECTURAL_FIXES_PLAN.md  CRITICAL_FIX_SUMMARY.md  DEBUG_PROJECT_LIMIT.py  DEPENDENCIES_AUDIT.md  DEPENDENCIES_FIX_SUMMARY.md  DOCKER_UPDATE_ANALYSIS.md  FAILING_TESTS_ANALYSIS.md  FINAL_RUNTIME_VERIFICATION.md  FINAL_STATUS_REPORT.md  FRONTEND_INTEGRATION_GUIDE.md  INVESTIGATION_REPORT.md  ISSUES_RESOLVED_MAPPING.md  LOCAL_WEBHOOK_TESTING.md  MANIFEST.md  METRICS_FIXES_SUMMARY.md  MONETIZATION_CENTRALIZATION.md  NEXT_STEPS.md  PHASE_3_1_COMPLETE.md  PHASE_3_1_FINAL_SUMMARY.txt  PHASE_3_2_1_INTEGRATION_COMPLETE.md  PHASE_3_2_2_E2E_COMPLETE.md  PHASE_3_2_COMPLETE.md  PHASE_3_2_GITHUB_SYNC_EDGE_CASES.md  PHASE_3_2_SUMMARY.txt  PHASE_4_INVESTIGATION.md  PHASE_4_REVIEW_FINDINGS.md  PYPI_UPDATE_PLAN.md  README.md  SESSION_COMPLETION_SUMMARY.md  SESSION_SUMMARY.md  SESSION_SUMMARY_APRIL_2_2026.md  SUBSCRIPTION_ENFORCEMENT_FIX.md  SUGGESTIONS_DEBUG_ANALYSIS.md  (+4 more)
.claude/: settings.local.json
.githooks/: prevent-monolithic-merge.sh
.github/: FUNDING.yml  WORKFLOW_ISSUES.md  dependabot.yml  pull_request_template.md
ARCHIVE_OBSOLETE_DOCS/: CRITICAL_FIXES_SUMMARY.md  IMPLEMENTATION_AND_TESTING_COMPLETE.md  IMPLEMENTATION_STATUS.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_3_IMPLEMENTATION_COMPLETE.md  PHASE_3_IMPLEMENTATION_PLAN.md  PHASE_3_VERIFICATION_SUMMARY.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_4_FINAL_REVIEW.md  PHASE_4_REFINEMENT_SUMMARY.md  PHASE_5_IMPLEMENTATION_PLAN.md  PHASE_COMPLETION_SUMMARY.md  SPECS_EXTRACTION_FIX_IMPLEMENTATION.md
Build Summary/: 1_Set up job.txt  2_Print summary.txt  3_Complete job.txt
Build and Push API Image/: 15_Post Build and push API image.txt  16_Post Log in to GitHub Container Registry.txt  17_Post Set up Docker Buildx.txt  18_Post Checkout code.txt  1_Set up job.txt  2_Checkout code.txt  3_Set up Docker Buildx.txt  9_Sign the image (Optional).txt
Build and Push Frontend Image/: 14_Post Log in to GitHub Container Registry.txt  15_Post Set up Docker Buildx.txt  16_Post Checkout code.txt  2_Checkout code.txt  4_Log in to GitHub Container Registry.txt  5_Extract metadata.txt  6_Build and push frontend image.txt  system.txt
Notify Deployment/: 4_Complete job.txt
Scan Images with Trivy/: 10_Post Run Trivy vulnerability scanner (API).txt  2_Run Trivy vulnerability scanner (API).txt  3_Run Trivy vulnerability scanner (Frontend).txt  7_Post Upload Trivy results to GitHub Security (Frontend).txt  8_Post Upload Trivy results to GitHub Security.txt
Test Images/: 1_Set up job.txt  (+2 more)
socrates-api/: .env.example  pyproject.toml
socrates-api/src/socrates_api/: database.py  main.py  models.py  monitoring.py  port_manager.py
socrates-api/src/socrates_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
socrates-api/src/socrates_api/auth/: __init__.py  dependencies.py  jwt_handler.py  password.py  project_access.py
socrates-api/src/socrates_api/caching/: __init__.py  redis_cache.py
socrates-api/src/socrates_api/middleware/: activity_tracker.py  cors_fix.py  metrics.py  rate_limit.py  security_headers.py  subscription.py
socrates-api/src/socrates_api/routers/: __init__.py  agents.py  analysis.py  analytics.py  auth.py  chat.py  chat_sessions.py  code_generation.py  collaboration.py  database_health.py  events.py  finalization.py  free_session.py  github.py  knowledge.py  knowledge_management.py  llm.py  llm_config.py  nlu.py  notes.py  presession.py  progress.py  projects.py  projects_chat.py  query.py  security.py  skills.py  sponsorships.py  subscription.py  system.py  websocket.py  websocket_polling.py  workflow.py
socrates-api/src/socrates_api/services/: report_generator.py
socrates-api/src/socrates_api/websocket/: __init__.py  connection_manager.py  event_bridge.py  message_handler.py
socrates-api/tests/: conftest.py  test_api.py  test_integration_issues.py  test_phase1_smoke.py  unit_analysis_router.py  unit_analysis_router_extended.py  unit_analytics_router.py  unit_auth_router.py  unit_auth_router_extended.py  unit_chat_sessions_router.py  unit_code_generation_router.py  unit_knowledge_router.py  unit_notes_router.py  unit_notes_router_extended.py  unit_projects_chat_router.py  unit_projects_router.py  unit_subscription_router.py
socrates-api/tests/integration/: test_all_endpoints.py  test_auth_95_percent_coverage.py  test_auth_scenarios.py  test_e2e_workflows.py  test_routers_comprehensive.py  test_routers_integration.py  test_security_penetration.py
socrates-openclaw/: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
socrates-openclaw/socrates_openclaw/: __init__.py  config.py  skill.py
socrates-openclaw/socrates_openclaw/components/: question_engine.py  response_processor.py  session_manager.py  spec_generator.py  storage_handler.py
socratic-core/: pyproject.toml
socratic-core/tests/: test_config.py
(+1615 files in other folders)
