[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socrates-ai"
version = "1.4.1"
description = "Socratic method tutoring system with multi-agent orchestration, RAG, code analysis, learning analytics, and workflow management"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Socrates AI Contributors"}
]
maintainers = [
    {name = "Socrates AI Contributors"}
]
keywords = [
    "ai",
    "claude",
    "socratic-method",
    "tutoring",
    "rag",
    "retrieval-augmented-generation",
    "multi-agent",
    "education",
    "software-engineering",
    "collaboration",
    "real-time",
    "knowledge-management",
    "kubernetes",
    "fastapi",
    "postgres",
    "vector-database",
    "chromadb",
    "github",
    "github-ready",
    "export",
    "project-generation",
    "git",
    "ci-cd",
    "github-actions",
    "docker",
    "gitops",
    "agents",
    "orchestration"
]

# Architecture Note:
# Socrates uses a modular architecture with clear separation:
# - PyPI libraries: Reusable tools for developers (agents, orchestration, analyzers, etc.)
# - Local code: Socrates-specific implementation
#
# Local implementations (not from PyPI):
# - backend/src/socrates_api/        → REST API server
# - cli/src/socrates_cli/            → Command-line interface
# - socratic_system/                 → Domain-specific business logic (orchestration, projects, learning)
#
# See ARCHITECTURE_ANALYSIS.md for complete architecture details.
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

dependencies = [
    # Core dependencies required for Socrates to function

    # PyPI packages (reusable developer tools) - Latest verified versions
    "socrates-nexus>=0.3.1",             # Universal LLM client (multi-provider: Claude, GPT-4, Gemini, Ollama)
    "socratic-core>=0.1.2",              # Core framework (config, events, exceptions)
    "socratic-agents>=0.2.6",            # Multi-agent orchestration (core functionality)

    # External dependencies (kept for orchestrator functionality)
    "anthropic>=0.72.0",                 # Required by: socratic-agents, socrates-nexus
    "socratic-rag>=0.1.3",               # Retrieval-Augmented Generation (core functionality)
    "socratic-security==0.4.0",          # Security utilities (prompt injection, path validation, sandboxing)
    "socratic-learning>=0.1.4",          # Learning system (interaction tracking, recommendations)
    "socratic-analyzer>=0.1.4",          # Code analysis capabilities (Pydantic v2 compatible)
    "socratic-conflict>=0.1.3",          # Conflict detection and resolution
    "socratic-knowledge>=0.1.5",         # Knowledge management with RBAC and versioning
    "socratic-workflow>=0.1.3",          # Workflow orchestration
    "socratic-docs>=0.1.2",              # Documentation generation and management
    "socratic-performance>=0.1.2",       # Performance monitoring and optimization (with cache support)
    "socratic-maturity>=0.1.1",          # Maturity calculation and phase assessment
    "chromadb>=0.5.0",                   # Required by: socratic-rag (vector database, performance improvements)
    "sentence-transformers>=3.0.0",      # Required by: socratic-rag (embeddings)
    "pypdf>=4.0.0",                      # Document processing for RAG systems
    "python-dateutil>=2.8.0",            # Date/time utilities (stdlib extension)
    "fastapi>=0.100.0",                  # API framework (examples/API server, performance boost)
    "uvicorn[standard]>=0.23.0",         # ASGI server (examples/API server)
    "pydantic>=2.0.0",                   # Data validation (core)
    "python-dotenv>=1.0.0",              # Configuration from .env files
    "PyJWT>=2.8.0",                      # JWT authentication (API) - primary JWT library
    "bcrypt>=4.0.0",                     # Password hashing (auth) - primary password hashing library
    "httpx>=0.24.0",                     # Async HTTP client
    "sqlalchemy>=2.0.0",                 # ORM (database operations)
    "redis>=5.0.0",                      # Caching and session storage (improved connection pooling)
    "slowapi>=0.1.9",                    # Rate limiting
    "prometheus-client>=0.19.0",         # Metrics and monitoring
    "alembic>=1.12.0",                   # Database migrations (latest patches)
    "requests>=2.31.0",                  # HTTP client library
    "cryptography>=46.0.5",              # Cryptographic operations (security patches)
    "psycopg2-binary>=2.9.0",            # PostgreSQL database driver
    "pillow>=10.0.0",                    # Image processing (build_exe.py icon conversion, security patches)
]

[project.optional-dependencies]
# All socratic-* core and interface libraries are now included in base dependencies
# These extras are for specialized development or deployment scenarios

# Development
dev = [
    "pytest>=8.0.0",                    # Works with Python 3.8+
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.0",
    "ruff>=0.15.7",                      # Updated for latest linting rules and performance
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "isort>=5.13.0",
    # Note: black>=26.3.1 and isort>=8.0.1 available but have formatting changes - test after update
]
async = [
    "asyncio>=3.4.3",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.19",
]

[project.urls]
Homepage = "https://github.com/Nireus79/Socrates"
Documentation = "https://github.com/Nireus79/Socrates/tree/master/docs"
Repository = "https://github.com/Nireus79/Socrates"
"Source Code" = "https://github.com/Nireus79/Socrates"
"Bug Tracker" = "https://github.com/Nireus79/Socrates/issues"
Changelog = "https://github.com/Nireus79/Socrates/releases"
"PyPI Package" = "https://pypi.org/project/socrates-ai/"

[tool.setuptools]
packages = [
    "socratic_system",
    "socratic_system.clients",
    "socratic_system.conflict_resolution",
    "socratic_system.core",
    "socratic_system.database",
    "socratic_system.models",
    "socratic_system.orchestration",
    "socratic_system.parsers",
    "socratic_system.services",
    "socratic_system.sponsorships",
    "socratic_system.subscription",
    "socratic_system.ui",
    "socratic_system.ui.commands",
    "socratic_system.utils",
]

[tool.setuptools.package-data]
socratic_system = [
    "py.typed",
    "config/knowledge_base.json",
]

[tool.setuptools.data-files]
"archive/migration_scripts" = [
    "archive/migration_scripts/*.sql",
]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "C",     # flake8-comprehensions
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function-call-in-default-argument (valid FastAPI pattern)
    "B904",  # within-an-except-clause (can use raise ... from e in future)
    "C901",  # function-is-too-complex (implementation detail)
]

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.9"  # MyPy requires 3.9+; type checking covers all Python 3.8+ code
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
strict_equality = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "socratic_system.ui.main_app",
    "socratic_system.ui.commands.*",
    "socratic_system.ui.nlu_handler",
    "socratic_system.agents.*",
    "socratic_system.clients.claude_client",
    "socratic_system.database.*",
    "socratic_system.core.analytics_calculator",
    "socratic_system.models.project",
    "socratic_system.config",
    "modules.foundation.llm_service",
    "modules.foundation.service",
    "modules.agents.agents.github_sync_handler",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "strict"
addopts = "--strict-markers --tb=short -v"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require mocking or local setup)",
    "slow: Tests that take >1 second",
    "requires_api: Tests requiring valid API key",
    "requires_github: Tests requiring GitHub credentials",
    "requires_token: Tests requiring authentication token",
    "e2e: End-to-end tests",
    "test_isolation: Tests that may fail due to test ordering/isolation issues (pass in isolation)",
]

[tool.coverage.run]
source = ["socratic_system"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.pydocstyle]
# Ignore non-critical docstring style violations
# D100, D104: Module and package docstrings (ignored in workflow)
# D203: 1 blank line before class (conflicts with D211)
# D212, D213: Multi-line docstring summary position (too strict)
# D400, D415: First line ending with period (non-critical style)
# D406, D407, D413: Section formatting (non-critical style)
ignore = ["D203", "D212", "D213", "D400", "D403", "D406", "D407", "D413", "D415"]
match = "(?!test_).*\\.py"
