[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socrates-api"
version = "1.0.0"
description = "REST API server for Socrates AI tutoring system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Socrates AI Contributors"}
]
keywords = [
    "api",
    "rest",
    "fastapi",
    "socrates",
    "ai",
    "tutoring"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Web Environment",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

dependencies = [
    "socrates-ai>=0.6.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "httpx>=0.24.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
socrates-api = "socrates_api.main:run"

[project.urls]
Homepage = "https://github.com/Nireus79/Socrates"
Repository = "https://github.com/Nireus79/Socrates"
"Bug Tracker" = "https://github.com/Nireus79/Socrates/issues"
"Source Code" = "https://github.com/Nireus79/Socrates/tree/main/socrates-api"

[tool.setuptools]
packages = ["socrates_api"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
